[mengqi] refactor: change to parameter test